improve animation delay

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </head>
   <body>
 	  <div class="headerAndSponsorshipWrapper" >
-      <div class="backgroundHeader" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50" data-aos-easing="ease-out"></div>
-      <header js-event="stickHeader" data-aos="fade" data-aos-offset="100" data-aos-delay="300" data-aos-easing="ease-out">
+      <div class="backgroundHeader" data-aos="fade-right"></div>
+      <header js-event="stickHeader" data-aos="fade" data-aos-delay="400">
         <div class="navWrapper">
             <div class="menuIcon">
               <button class="menuButton js-menuToggle">
@@ -144,21 +144,21 @@
         <div class="fiscalSponsorshipSectionContent">
           <div class="fiscalSponsorshipTitleAndActionWrapper">
             <div class="fiscalSponsorshipTitlesContainer">
-              <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="700" data-aos-easing="ease-out">
+              <h3 data-aos="fade" data-aos-delay="450">
                 Get your initiative up and running today
               </h3>
               <div class="title" >
                <h1>
-                <span data-aos="fade-down" data-aos-offset="100" data-aos-delay="700" data-aos-easing="ease-out">
+                <span data-aos="fade-down" data-aos-delay="450">
                   Fiscal Sponsorship
                 </span>
-                <span class="madeEasy" data-aos="fade-down" data-aos-offset="100" data-aos-delay="1100" data-aos-easing="ease-out">
+                <span class="madeEasy" data-aos="fade-down" data-aos-delay="500">
                   made easy
                 </span>
                </h1>
               </div>
             </div>
-            <div class="actionWrapper" data-aos="fade-up" data-aos-offset="100" data-aos-delay="1400" data-aos-easing="ease-out">
+            <div class="actionWrapper" data-aos="fade-up" data-aos-delay="400" data-aos-easing="ease-out">
               <button class="buttonStyleLink applyToStart mobileApply" js-event="applyToStart">
                 Apply to Start
               </button>
@@ -170,49 +170,49 @@
               </a>
             </div>
           </div>
-          <div class="sponsorShipIllustrationWrapper" data-aos="fade-left" data-aos-offset="200" data-aos-delay="70" data-aos-easing="ease-out">
+          <div class="sponsorShipIllustrationWrapper" data-aos="fade-left" data-aos-easing="ease-out">
             <img src="/images/fiscalsponsorship-ilustration.png" class="biggest" alt="Sponsorship Illustration"  />
           </div>
         </div>
       </section>
     </div>
     <section id="whatWeOffer" js-view="mainSection" class="whatWeOffer">
-      <h2 data-aos="fade-down" data-aos-offset="100" data-aos-delay="1800" data-aos-easing="ease-out-in">
+      <h2 data-aos="fade-down" data-aos-easing="ease-out-in">
         What we offer
       </h2>
       <div class="whatWeOfferItems">
         <div class="whatWeOfferItem fiscalSponsorship">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2200" data-aos-easing="ease-out">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="500" data-aos-easing="ease-out">
             <img src="/images/fiscalSponsorship-illustration.png" alt="Fiscal Sponsorship" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-offset="0" data-aos-delay="2300" data-aos-easing="ease-out-quad">Let's work together</h5>
-            <h3 data-aos="fade" data-aos-offset="0" data-aos-delay="2350" data-aos-easing="ease-out-quad">Fiscal Sponsorship</h3>
-            <p data-aos="fade" data-aos-offset="0" data-aos-delay="2400" data-aos-easing="ease-out-quad">
+            <h5 data-aos="fade" data-aos-delay="550" data-aos-easing="ease-out-quad">Let's work together</h5>
+            <h3 data-aos="fade" data-aos-delay="600" data-aos-easing="ease-out-quad">Fiscal Sponsorship</h3>
+            <p data-aos="fade" data-aos-delay="650" data-aos-easing="ease-out-quad">
               The Open Collective Foundation 501(c)(3) offers fiscal sponsorship as a service to help initiatives get up and running in one day. No need to create a bank account or legal entity. Our platform enables you to easily receive donations and disburse them.
             </p>
           </div>
         </div>
         <div class="whatWeOfferItem reduceYourOverhead">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2450" data-aos-easing="ease-out">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="700" data-aos-easing="ease-out">
             <img src="/images/reduceoverhead-illustration.png" alt="Reduce Your Overhead" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-offset="100" data-aos-delay="2500" data-aos-easing="ease-out">We manage funds for your initiative</h5>
-            <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="2550" data-aos-easing="ease-out">Reduce your overhead</h3>
-            <p data-aos="fade" data-aos-offset="100" data-aos-delay="2600" data-aos-easing="ease-out">
+            <h5 data-aos="fade" data-aos-delay="750" data-aos-easing="ease-out">We manage funds for your initiative</h5>
+            <h3 data-aos="fade" data-aos-delay="800" data-aos-easing="ease-out">Reduce your overhead</h3>
+            <p data-aos="fade" data-aos-delay="850" data-aos-easing="ease-out">
               We take care of receiving tax deductible donations for your initiative through our registered 501(c)(3) nonprofit. We manage your expenses, file taxes, and take care of accounting. Let us do the admin so you can focus on your mission!
             </p>
           </div>
         </div>
         <div class="whatWeOfferItem increaseCapacity">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-offset="100" data-aos-delay="2650" data-aos-easing="ease-out">
+          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="900" data-aos-easing="ease-out">
             <img src="/images/increaseCapacity.png" alt="Increase capacity" />
           </div>
           <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-offset="100" data-aos-delay="2700" data-aos-easing="ease-out">Purpose-built to streamline your process</h5>
-            <h3 data-aos="fade" data-aos-offset="100" data-aos-delay="2750" data-aos-easing="ease-out">Increase capacity</h3>
-            <p data-aos="fade" data-aos-offset="100" data-aos-delay="2800" data-aos-easing="ease-out">
+            <h5 data-aos="fade" data-aos-delay="950" data-aos-easing="ease-out">Purpose-built to streamline your process</h5>
+            <h3 data-aos="fade" data-aos-delay="1000" data-aos-easing="ease-out">Increase capacity</h3>
+            <p data-aos="fade" data-aos-delay="1050" data-aos-easing="ease-out">
               We automate the back-end processes so you can spend less time doing admin. We provide a dashboard where you can see the budget we are holding for you, how much you've spent and everything you need to tell your donors how to fund you. Reporting is automatic and in real time.
             </p>
           </div>
