follow up review

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <button class="buttonStyleLink applyToStart desktopApply" js-event="applyToStart">
                 Apply with your initiative
               </button>
-              <a href="https://docs.opencollective.foundation" class="learnMore">
+              <a href="https://docs.opencollective.foundation" target="__blank" class="learnMore">
                 Learn More
               </a>
             </div>
@@ -246,10 +246,10 @@
               <button class="buttonStyleLink longerTextLink" js-event="applyToStart">
                 Apply with your initiative
               </button>
-              <a class="buttonStyleLink readDocs mobile" href="#">
+              <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation" target="__blank">
                 Read docs
               </a>
-               <a class="buttonStyleLink readDocs longerTextLink" href="#">
+               <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation" target="__blank">
                 Read Documentation
               </a>
             </div>
@@ -666,8 +666,8 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
             </p>
           </div>
           <div class="actionWrapper">
-            <a href="#" class="buttonStyleLink readDocs mobile">Read Docs</a>
-            <a href="#" class="buttonStyleLink readDocs tablet desktop">Read Documentation</a>
+            <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs mobile">Read Docs</a>
+            <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs tablet desktop">Read Documentation</a>
             <button js-event='contactUs' class="buttonStyleLink contactUsBtn">Contact us</button>
           </div>
         </div>
