update white background for getstarted section

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           </div>
        </div>
       </header>
+      <div class="TopWhiteBackground" data-aos="fade"></div>
       <section class="fiscalSponsorshipSection">
         <div class="fiscalSponsorshipSectionContent">
           <div class="fiscalSponsorshipTitleAndActionWrapper">
@@ -176,87 +177,88 @@
         </div>
       </section>
     </div>
-    <section id="whatWeOffer" js-view="mainSection" class="whatWeOffer">
-      <h2 data-aos="fade-down" data-aos-easing="ease-out-in">
-        What we offer
-      </h2>
-      <div class="whatWeOfferItems">
-        <div class="whatWeOfferItem fiscalSponsorship">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="40" data-aos-easing="ease-out">
-            <img src="/images/fiscalSponsorship-illustration.png" alt="Fiscal Sponsorship" />
+    <section id="whatWeOffer" js-view="mainSection" class="whatWeOfferSection">
+      <div class="whatWeOffer" data-aos="fade">
+        <h2 data-aos="fade-down" data-aos-easing="ease-out-in">
+          What we offer
+        </h2>
+        <div class="whatWeOfferItems">
+          <div class="whatWeOfferItem fiscalSponsorship">
+            <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="40" data-aos-easing="ease-out">
+              <img src="/images/fiscalSponsorship-illustration.png" alt="Fiscal Sponsorship" />
+            </div>
+            <div class="whatWeOfferTextWrapper">
+              <h5 data-aos="fade" data-aos-delay="60" data-aos-easing="ease-out-quad">Let's work together</h5>
+              <h3 data-aos="fade" data-aos-delay="80" data-aos-easing="ease-out-quad">Fiscal Sponsorship</h3>
+              <p data-aos="fade" data-aos-delay="100" data-aos-easing="ease-out-quad">
+                The Open Collective Foundation 501(c)(3) offers fiscal sponsorship as a service to help initiatives get up and running in one day. No need to create a bank account or legal entity. Our platform enables you to easily receive donations and disburse them.
+              </p>
+            </div>
           </div>
-          <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-delay="60" data-aos-easing="ease-out-quad">Let's work together</h5>
-            <h3 data-aos="fade" data-aos-delay="80" data-aos-easing="ease-out-quad">Fiscal Sponsorship</h3>
-            <p data-aos="fade" data-aos-delay="100" data-aos-easing="ease-out-quad">
-              The Open Collective Foundation 501(c)(3) offers fiscal sponsorship as a service to help initiatives get up and running in one day. No need to create a bank account or legal entity. Our platform enables you to easily receive donations and disburse them.
-            </p>
+          <div class="whatWeOfferItem reduceYourOverhead">
+            <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="120" data-aos-easing="ease-out">
+              <img src="/images/reduceoverhead-illustration.png" alt="Reduce Your Overhead" />
+            </div>
+            <div class="whatWeOfferTextWrapper">
+              <h5 data-aos="fade" data-aos-delay="140" data-aos-easing="ease-out">We manage funds for your initiative</h5>
+              <h3 data-aos="fade" data-aos-delay="160" data-aos-easing="ease-out">Reduce your overhead</h3>
+              <p data-aos="fade" data-aos-delay="200" data-aos-easing="ease-out">
+                We take care of receiving tax deductible donations for your initiative through our registered 501(c)(3) nonprofit. We manage your expenses, file taxes, and take care of accounting. Let us do the admin so you can focus on your mission!
+              </p>
+            </div>
           </div>
-        </div>
-        <div class="whatWeOfferItem reduceYourOverhead">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="120" data-aos-easing="ease-out">
-            <img src="/images/reduceoverhead-illustration.png" alt="Reduce Your Overhead" />
-          </div>
-          <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-delay="140" data-aos-easing="ease-out">We manage funds for your initiative</h5>
-            <h3 data-aos="fade" data-aos-delay="160" data-aos-easing="ease-out">Reduce your overhead</h3>
-            <p data-aos="fade" data-aos-delay="200" data-aos-easing="ease-out">
-              We take care of receiving tax deductible donations for your initiative through our registered 501(c)(3) nonprofit. We manage your expenses, file taxes, and take care of accounting. Let us do the admin so you can focus on your mission!
-            </p>
-          </div>
-        </div>
-        <div class="whatWeOfferItem increaseCapacity">
-          <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="220" data-aos-easing="ease-out">
-            <img src="/images/increaseCapacity.png" alt="Increase capacity" />
-          </div>
-          <div class="whatWeOfferTextWrapper">
-            <h5 data-aos="fade" data-aos-delay="240" data-aos-easing="ease-out">Purpose-built to streamline your process</h5>
-            <h3 data-aos="fade" data-aos-delay="260" data-aos-easing="ease-out">Increase capacity</h3>
-            <p data-aos="fade" data-aos-delay="280" data-aos-easing="ease-out">
-              We automate the back-end processes so you can spend less time doing admin. We provide a dashboard where you can see the budget we are holding for you, how much you've spent and everything you need to tell your donors how to fund you. Reporting is automatic and in real time.
-            </p>
+          <div class="whatWeOfferItem increaseCapacity">
+            <div class="whatWeOfferIllustration" data-aos="fade" data-aos-delay="220" data-aos-easing="ease-out">
+              <img src="/images/increaseCapacity.png" alt="Increase capacity" />
+            </div>
+            <div class="whatWeOfferTextWrapper">
+              <h5 data-aos="fade" data-aos-delay="240" data-aos-easing="ease-out">Purpose-built to streamline your process</h5>
+              <h3 data-aos="fade" data-aos-delay="260" data-aos-easing="ease-out">Increase capacity</h3>
+              <p data-aos="fade" data-aos-delay="280" data-aos-easing="ease-out">
+                We automate the back-end processes so you can spend less time doing admin. We provide a dashboard where you can see the budget we are holding for you, how much you've spent and everything you need to tell your donors how to fund you. Reporting is automatic and in real time.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </section>
-    <div class="getStartedInitiativeBG">
-      <section class="readyToGetStartedSection">
-        <div class="readyToGetStarted">
-          <div class="readyToGetStartedIllustration" data-aos="fade-right" >
-            <img src="/images/readytogetstarted.png" alt="Ready to get started" />
+    <section class="readyToGetStartedSection">
+      <div class="readyToGetStarted">
+        <div class="readyToGetStartedIllustration" data-aos="fade-right" >
+          <img src="/images/readytogetstarted.png" alt="Ready to get started" />
+        </div>
+        <div class="getStartedTextAndActionWrapper" data-aos="fade-left">
+          <div class="getStartedTextWrapper">
+            <div class="titleWrapper">
+              <h2>Ready to get started?</h2>
+            </div>
+            <div class="descriptionWrapper">
+              <p>
+                Open Collective Foundation helps you run your initiative with minimal hassle. Grantees and project participants will love the simplicity and accessibility, and you’ll love how much your overhead is reduced.
+              </p>
+              <p class="boldParagrah">
+                Reach out to us! We will set up a call and help you get started
+              </p>
+            </div>
           </div>
-          <div class="getStartedTextAndActionWrapper" data-aos="fade-left">
-            <div class="getStartedTextWrapper">
-              <div class="titleWrapper">
-                <h2>Ready to get started?</h2>
-              </div>
-              <div class="descriptionWrapper">
-                <p>
-                  Open Collective Foundation helps you run your initiative with minimal hassle. Grantees and project participants will love the simplicity and accessibility, and you’ll love how much your overhead is reduced.
-                </p>
-                <p class="boldParagrah">
-                  Reach out to us! We will set up a call and help you get started
-                </p>
-              </div>
-            </div>
-            <div class="actionWrapper">
-              <button class="buttonStyleLink mobile" js-event="applyToStart">
-                Apply to Start
-              </button>
-              <button class="buttonStyleLink longerTextLink" js-event="applyToStart">
-                Apply with your initiative
-              </button>
-              <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation" target="__blank">
-                Read docs
-              </a>
-               <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation" target="__blank">
-                Read Documentation
-              </a>
-            </div>
+          <div class="actionWrapper">
+            <button class="buttonStyleLink mobile" js-event="applyToStart">
+              Apply to Start
+            </button>
+            <button class="buttonStyleLink longerTextLink" js-event="applyToStart">
+              Apply with your initiative
+            </button>
+            <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation" target="__blank">
+              Read docs
+            </a>
+             <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation" target="__blank">
+              Read Documentation
+            </a>
           </div>
         </div>
-      </section>
-    </div>
+      </div>
+    <div class="getStartedBackground" data-aos="fade"></div>
+    </section>
     <section id="whatDoWeDo" js-view="mainSection" class="initiativeSection">
       <div class="initiatives">
         <div class="titleWrapper">
