improve newsletter subscription feedback process

--- a/index.html
+++ b/index.html
@@ -690,6 +690,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
               <div class="subscribe">
                 <label>Email</label><br>
                 <input name="email" type="email" required />
+                <p class="subscriptionFeedback"></p>
               </div>
               <button type="submit" class="subscribeButton">Subscribe</button>
             </form>
