improve contactus and createInitiativee feedback process

--- a/index.html
+++ b/index.html
@@ -729,6 +729,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
                   <label>Message</label>
                   <textarea name="message" spellcheck="true"></textarea>
                 </div>
+                <p class="modalFormErrorFeedback"></p>
                 <div class="modalActionWrapper">
                   <button type="submit" class="buttonStyleLink sendButton">Send</button>
                   <button type="button" class="buttonStyleLink closeButton" js-event="closeModal">Close</button>
@@ -771,6 +772,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
                     I agree with the <a href="#" class="termsOfServiceLink">terms of service</a> of Open Collective Foundation.
                   </span>
                 </div>
+                <p class="modalFormErrorFeedback"></p>
                 <div class="modalActionWrapper">
                   <button type="submit" class="buttonStyleLink sendButton">Apply Now</button>
                   <button type="button" class="buttonStyleLink closeButton" js-event="closeModal">Close</button>
