update hover, foucs and active state of buttons

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2zm13 2.383l-4.758 2.855L15 11.114v-5.73zm-.034 6.878L9.271 8.82 8 9.583 6.728 8.82l-5.694 3.44A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.739zM1 11.114l4.758-2.876L1 5.383v5.73z"/>
                 </svg>
               </button>
-              <button class="buttonStyleLink contactUsButton" js-event="contactUs">
+              <button class="buttonStyleLink contactUsButton greenButton" js-event="contactUs">
                 Contact us
               </button>
             </div>
@@ -242,10 +242,10 @@
             </div>
           </div>
           <div class="actionWrapper">
-            <button class="buttonStyleLink mobile" js-event="applyToStart">
+            <button class="buttonStyleLink mobile greenButton" js-event="applyToStart">
               Apply to Start
             </button>
-            <button class="buttonStyleLink longerTextLink" js-event="applyToStart">
+            <button class="buttonStyleLink longerTextLink greenButton" js-event="applyToStart">
               Apply with your initiative
             </button>
             <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation" target="__blank">
@@ -257,7 +257,7 @@
           </div>
         </div>
       </div>
-    <div class="getStartedBackground" data-aos="fade"></div>
+    <div class="getStartedBackground"></div>
     </section>
     <section id="whatDoWeDo" js-view="mainSection" class="initiativeSection">
       <div class="initiatives">
@@ -670,7 +670,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
           <div class="actionWrapper">
             <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs mobile">Read Docs</a>
             <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs tablet desktop">Read Documentation</a>
-            <button js-event='contactUs' class="buttonStyleLink contactUsBtn">Contact us</button>
+            <button js-event='contactUs' class="buttonStyleLink contactUsBtn greenButton">Contact us</button>
           </div>
         </div>
       </div>
@@ -731,7 +731,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
                 </div>
                 <p class="modalFormErrorFeedback"></p>
                 <div class="modalActionWrapper">
-                  <button type="submit" class="buttonStyleLink sendButton">Send</button>
+                  <button type="submit" class="buttonStyleLink sendButton greenButton">Send</button>
                   <button type="button" class="buttonStyleLink closeButton" js-event="closeModal">Close</button>
                 </div>
               </form>
@@ -774,7 +774,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
                 </div>
                 <p class="modalFormErrorFeedback"></p>
                 <div class="modalActionWrapper">
-                  <button type="submit" class="buttonStyleLink sendButton">Apply Now</button>
+                  <button type="submit" class="buttonStyleLink sendButton greenButton">Apply Now</button>
                   <button type="button" class="buttonStyleLink closeButton" js-event="closeModal">Close</button>
                 </div>
               </form>
