--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Open Collective Foundation</title>
     <meta name="description" content="Fiscal Sponsorship as a service.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon"type="image/png" href="/images/favicon/favicon-96x96.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/index.css">
