--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li class="menuList-sm">
                   <a href="#whatDoWeDo" js-link="whatDoWeDo">
-                    What do we do?
+                    What do we
                   </a>
                 </li>
                 <li class="menuList-sm">
@@ -123,7 +123,7 @@
               </a>
               <a href="#whatDoWeDo" js-link="whatDoWeDo">
                 <li class="mobileNavList">
-                  What do we do?
+                  What do we
                 </li>
               </a>
               <a href="#ourFees" js-link="ourFees">
@@ -167,7 +167,7 @@
               <button class="buttonStyleLink applyToStart desktopApply" js-event="applyToStart">
                 Apply with your initiative
               </button>
-              <a href="https://docs.opencollective.foundation" target="__blank" class="learnMore">
+              <a href="#whatWeOffer" class="learnMore">
                 Learn More
               </a>
             </div>
@@ -249,11 +249,8 @@
             <button class="buttonStyleLink longerTextLink greenButton" js-event="applyToStart">
               Apply with your initiative
             </button>
-            <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation" target="__blank">
-              Read docs
-            </a>
-             <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation" target="__blank">
-              Read Documentation
+             <a class="buttonStyleLink readDocs" href="https://docs.opencollective.foundation" target="__blank">
+              Learn More
             </a>
           </div>
         </div>
@@ -357,7 +354,7 @@
                     <span class="number">4</span>
                     <span class="percentage">%</span>
                   </div>
-                  <span class="figureInWords">More than 1 Million raised</span>
+                  <span class="figureInWords">Over a Million raised</span>
                 </div>
               </div>
             </div>
@@ -669,8 +666,7 @@ There are many reasons a group might want to be fiscally sponsored! Read more ab
             </p>
           </div>
           <div class="actionWrapper">
-            <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs mobile">Read Docs</a>
-            <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs tablet desktop">Read Documentation</a>
+            <a  href="https://docs.opencollective.foundation" target="__blank" class="buttonStyleLink readDocs">Learn More</a>
             <button js-event='contactUs' class="buttonStyleLink contactUsBtn greenButton">Contact us</button>
           </div>
         </div>
