improve responsiveness of top section

--- a/index.html
+++ b/index.html
@@ -150,13 +150,12 @@
                 Get your initiative up and running today
               </h3>
               <div class="title" >
-               <h1>
-                <span data-aos="fade-down" data-aos-delay="450">
+                <h1 data-aos="fade-down" data-aos-delay="450">
                   Fiscal Sponsorship
-                </span>
-                <span class="madeEasy" data-aos="fade-down" data-aos-delay="500">
+                </h1>
+                <h1 class="madeEasy" data-aos="fade-down" data-aos-delay="500">
                   made easy
-                </span>
+                </h1>
                </h1>
               </div>
             </div>
@@ -250,7 +249,7 @@
               Apply with your initiative
             </button>
              <a class="buttonStyleLink readDocs" href="https://docs.opencollective.foundation" target="__blank">
-              Learn More
+              Read Info Guide
             </a>
           </div>
         </div>
