correct the What do we to What we do

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </li>
                 <li class="menuList-sm">
                   <a href="#whatDoWeDo" js-link="whatDoWeDo">
-                    What do we
+                    What we do
                   </a>
                 </li>
                 <li class="menuList-sm">
@@ -123,7 +123,7 @@
               </a>
               <a href="#whatDoWeDo" js-link="whatDoWeDo">
                 <li class="mobileNavList">
-                  What do we
+                  What we do
                 </li>
               </a>
               <a href="#ourFees" js-link="ourFees">
