follow up review

--- a/index.html
+++ b/index.html
@@ -86,61 +86,61 @@
               </button>
             </div>
         </div>
-        <div class="mobileNavOverlay">
-        </div>
-        <div class="mobileNavWrapper">
-          <div class="mobileNavContent">
-            <div class="closeMenuButtonWrapper">
-              <button class="closeMenuButton js-menuToggle">
-                <svg width="19px" height="19px" viewBox="0 0 19 19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-                  <title>icn-close-menu</title>
-                  <g id="02-Mobile" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                      <g id="05-OCF-Pop-up-confirmation-Mobile" transform="translate(-18.000000, -79.000000)" fill="#05464A" fill-rule="nonzero">
-                          <g id="Overlay" transform="translate(-560.000000, 40.000000)">
-                              <g id="Form" transform="translate(560.000000, 0.000000)">
-                                  <g id="icn-close-menu" transform="translate(18.000000, 39.000000)">
-                                      <path d="M20.6338462,8.12615385 L-1.00307692,8.12615385 C-1.59384615,8.12615385 -2,8.53230769 -2,9.12307692 C-2,9.71384615 -1.59384615,10.12 -1.00307692,10.12 L20.6707692,10.12 C21.2615385,10.12 21.6676923,9.71384615 21.6676923,9.12307692 C21.6307692,8.53230769 21.2246154,8.12615385 20.6338462,8.12615385 L20.6338462,8.12615385 Z" id="Path" transform="translate(9.833846, 9.123077) rotate(-315.000000) translate(-9.833846, -9.123077) "></path>
-                                      <path d="M20.6338462,8.12615385 L-1.00307692,8.12615385 C-1.59384615,8.12615385 -2,8.53230769 -2,9.12307692 C-2,9.71384615 -1.59384615,10.12 -1.00307692,10.12 L20.6707692,10.12 C21.2615385,10.12 21.6676923,9.71384615 21.6676923,9.12307692 C21.6307692,8.53230769 21.2246154,8.12615385 20.6338462,8.12615385 L20.6338462,8.12615385 Z" id="Path" transform="translate(9.833846, 9.123077) rotate(-225.000000) translate(-9.833846, -9.123077) "></path>
-                                  </g>
-                              </g>
-                          </g>
-                      </g>
-                  </g>
-                </svg>
-              </button>
-            </div>
-          <div class="mobileNav">
-            <ul class="mobileNavListWrapper">
-              <a href="#" js-link="home">
-                <li class="mobileNavList">
-                  Home
-                </li>
-              </a>
-              <a href="#whatWeOffer" js-link="whatWeOffer">
-                <li class="mobileNavList">
-                  What We Offer
-                </li>
-              </a>
-              <a href="#whatDoWeDo" js-link="whatDoWeDo">
-                <li class="mobileNavList">
-                  What we do
-                </li>
-              </a>
-              <a href="#ourFees" js-link="ourFees">
-                <li class="mobileNavList">
-                  Our Fees
-                </li>
-              </a>
-              <a href="#generalInformation" js-link="generalInformation">
-                <li class="mobileNavList">
-                  General Info
-                </li>
-              </a>
-            </ul>
-          </div>
-          </div>
-       </div>
       </header>
+      <div class="mobileNavOverlay">
+      </div>
+      <div class="mobileNavWrapper">
+        <div class="mobileNavContent">
+          <div class="closeMenuButtonWrapper">
+            <button class="closeMenuButton js-menuToggle">
+              <svg width="19px" height="19px" viewBox="0 0 19 19" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <title>icn-close-menu</title>
+                <g id="02-Mobile" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                    <g id="05-OCF-Pop-up-confirmation-Mobile" transform="translate(-18.000000, -79.000000)" fill="#05464A" fill-rule="nonzero">
+                        <g id="Overlay" transform="translate(-560.000000, 40.000000)">
+                            <g id="Form" transform="translate(560.000000, 0.000000)">
+                                <g id="icn-close-menu" transform="translate(18.000000, 39.000000)">
+                                    <path d="M20.6338462,8.12615385 L-1.00307692,8.12615385 C-1.59384615,8.12615385 -2,8.53230769 -2,9.12307692 C-2,9.71384615 -1.59384615,10.12 -1.00307692,10.12 L20.6707692,10.12 C21.2615385,10.12 21.6676923,9.71384615 21.6676923,9.12307692 C21.6307692,8.53230769 21.2246154,8.12615385 20.6338462,8.12615385 L20.6338462,8.12615385 Z" id="Path" transform="translate(9.833846, 9.123077) rotate(-315.000000) translate(-9.833846, -9.123077) "></path>
+                                    <path d="M20.6338462,8.12615385 L-1.00307692,8.12615385 C-1.59384615,8.12615385 -2,8.53230769 -2,9.12307692 C-2,9.71384615 -1.59384615,10.12 -1.00307692,10.12 L20.6707692,10.12 C21.2615385,10.12 21.6676923,9.71384615 21.6676923,9.12307692 C21.6307692,8.53230769 21.2246154,8.12615385 20.6338462,8.12615385 L20.6338462,8.12615385 Z" id="Path" transform="translate(9.833846, 9.123077) rotate(-225.000000) translate(-9.833846, -9.123077) "></path>
+                                </g>
+                            </g>
+                        </g>
+                    </g>
+                </g>
+              </svg>
+            </button>
+          </div>
+        <div class="mobileNav">
+          <ul class="mobileNavListWrapper">
+            <a href="#" js-link="home">
+              <li class="mobileNavList">
+                Home
+              </li>
+            </a>
+            <a href="#whatWeOffer" js-link="whatWeOffer">
+              <li class="mobileNavList">
+                What We Offer
+              </li>
+            </a>
+            <a href="#whatDoWeDo" js-link="whatDoWeDo">
+              <li class="mobileNavList">
+                What we do
+              </li>
+            </a>
+            <a href="#ourFees" js-link="ourFees">
+              <li class="mobileNavList">
+                Our Fees
+              </li>
+            </a>
+            <a href="#generalInformation" js-link="generalInformation">
+              <li class="mobileNavList">
+                General Info
+              </li>
+            </a>
+          </ul>
+        </div>
+        </div>
+      </div>
       <div class="TopWhiteBackground" data-aos="fade"></div>
       <section class="fiscalSponsorshipSection">
         <div class="fiscalSponsorshipSectionContent">
@@ -248,8 +248,11 @@
             <button class="buttonStyleLink longerTextLink greenButton" js-event="applyToStart">
               Apply with your initiative
             </button>
-             <a class="buttonStyleLink readDocs" href="https://docs.opencollective.foundation" target="__blank">
+             <a class="buttonStyleLink readDocs longerTextLink" href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide" target="__blank">
               Read Info Guide
+            </a>
+            <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide" target="__blank">
+              Read Guide
             </a>
           </div>
         </div>
