update read guide to more info button

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               Read Info Guide
             </a>
             <a class="buttonStyleLink readDocs mobile" href="https://docs.opencollective.foundation/about/fiscal-sponsorship-info-guide" target="__blank">
-              Read Guide
+              More Info
             </a>
           </div>
         </div>
