update our fees section

--- a/index.html
+++ b/index.html
@@ -326,55 +326,45 @@
         </div>
         <div class="fiscalSponsorshipWrapper">
           <h2 data-aos="fade">Fiscal Sponsorship Fees</h2>
-          <p>On each incoming donation via Bank Transfer or Check</p>
         </div>
         <div class="amountRaisedAndCrowdFundWrapper">
           <div class="amountRaisedWrapperWithTitle" data-aos="fade-right">
-            <p class="desktop">On each incoming donation via Bank Transfer or Check</p>
             <div class="amountRaisedWrapper">
-              <div class="amountRaisedCard eightPercent">
+              <div class="amountRaisedCard fivePercent">
                 <div class="figureRaisedWrapper">
                   <div class="figure">
-                    <span class="number">8</span>
+                    <span class="number">5</span>
                     <span class="percentage">%</span>
                   </div>
-                  <span class="figureInWords">Up to 500k raised</span>
-                </div>
-              </div>
-              <div class="amountRaisedCard sixPercent">
-                <div class="figureRaisedWrapper">
-                  <div class="figure">
-                    <span class="number">6</span>
-                    <span class="percentage">%</span>
+                  <div class="methodWrapper">
+                    <span class="method">Crowdfunding</span>
+                    <span class="methodDescription">
+                      On each incoming donation made via the <span>Open Collective Platform</span>
+                    </span>
                   </div>
-                  <span class="figureInWords">Up to 1 Million raised</span>
                 </div>
               </div>
               <div class="amountRaisedCard fourPercent">
                 <div class="figureRaisedWrapper">
                   <div class="figure">
-                    <span class="number">4</span>
+                    <span class="number">4-8</span>
                     <span class="percentage">%</span>
                   </div>
-                  <span class="figureInWords">Over a Million raised</span>
+                  <div class="methodWrapper">
+                    <span class="method">Bank Transfer or Check</span>
+                    <span class="methodDescription">**Based on amount raised</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="crowdFundingWrapper" data-aos="fade-left">
-            <h3>Crowdfunding</h3>
-            <div class="amountRaisedCard fivePercent">
-              <div class="figureRaisedWrapper">
-                <div class="figure">
-                  <span class="number">5</span>
-                  <span class="percentage">%</span>
-                </div>
-                <div class="figureInWords">On each incoming donation made via the Open Collective Platform</div>
-              </div>
-            </div>
+          <div class="crowdFundingWrapper" data-aos="fade">
             <div class="note">
               <p>
                 *Third-party payment processors (like Stripe and Paypal) charge separate fees on each transaction made using their service.  <a href="https://docs.opencollective.foundation/faqs/untitled#how-much-does-it-cost" class="learnMoreHere">Learn more here</a>.
+              </p>
+              <p>
+                <strong>**8%</strong> Up to 500k raised.  -   <strong>6%</strong> Up to 1 Million raised.  -   <strong>4%</strong> Over a Million raised
               </p>
             </div>
           </div>
